# mage

./: CMakeLists.txt  MAGE.h  MAGEANGL.c  MAGEANGL.h  MAGEBALL.c  MAGEBALL.h  MAGEBBOX.c  MAGEBBOX.h  MAGECLON.c  MAGECLON.h  MAGECMYK.h  MAGECOLR.c  MAGECOLR.h  MAGEDLOG.c  MAGEDLOG.h  MAGEDRAW.c  MAGEFILE.c  MAGEFLAG.h  MAGEFOO.c  MAGEFOO.h  MAGEHELP.c  MAGEHELP.h  MAGEINIT.c  MAGEINPT.c  MAGELIST.c  MAGELIST.h  MAGEMENU.c  MAGEMENU.h  MAGEOUT.c  MAGEOUTR.c  MAGEOUTR.h  MAGEPIXL.c  MAGEPOST.c  MAGEPOST.h  MAGEREND.c  MAGEREND.h  MAGESCOR.c  MAGESCRT.c  MAGESCRT.h  MAGESETS.c  (+25 more)
lib/: libjpeg.8.dylib  libpng15.15.dylib
